cmake_minimum_required(VERSION 3.12)
project(lvgl_sim_qt LANGUAGES C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_MODULE_PATH ${LVGL_QT_PATH})

if(NOT LVGL_QT_PATH)
	message(FATAL_ERROR "LVGL_QT_PATH must be defined")
endif()

find_package(QT
	NAMES Qt6
	COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR}
	COMPONENTS
    Quick
    Widgets
  REQUIRED
)

add_subdirectory(lvgl_qt)
